--- a/app/views/document_publishing/show.html.erb
+++ b/app/views/document_publishing/show.html.erb
@@ -141,21 +141,21 @@
                     <img id="page-img" src=''/>
                     
                     <div id="app-border" style="position:absolute;width:100%;height:100%;display:none;top:-7px">
-                        <div id="app-border-top">
+                        <!--<div id="app-border-top">
                             <div class="corner" style="background:url(/uniboard-player/images/top-corner-left.png)"></div>
                             <div class="middle top"></div>
                             <div class="corner right" style="background:url(/uniboard-player/images/top-corner-right.png)"></div>
-                        </div>
+                        </div>-->
                         <div id="app-border-middle">
-                            <div class="middle-left"></div>
-                            <!--<img style="position:absolute;left:50%;margin-left:-10px; top:100%; margin-top:-20px" src="/uniboard-player/images/app-view.png">-->
-                            <div class="middle-right"></div>
+                            <!--<div class="middle-left"></div>-->
+                            <img style="opacity:0;position:absolute;left:50%;margin-left:-37px; top:100%; margin-top:-30px" src="/uniboard-player/images/app-view.png">
+                            <!--<div class="middle-right"></div>-->
                         </div>
-                        <div id="app-border-bottom">
+                        <!--<div id="app-border-bottom">
                             <div class="corner" style="background:url(/uniboard-player/images/bottom-corner-left.png)"></div>
                             <div class="middle bottom"></div>
                             <div class="corner right" style="background:url(/uniboard-player/images/bottom-corner-right.png)"></div>
-                        </div>
+                        </div>-->
                     </div>
                 </div>
             </div>
