--- a/public/uniboard-player/stylesheets/master.css
+++ b/public/uniboard-player/stylesheets/master.css
@@ -265,10 +265,11 @@ label{ display:block; margin-top:15px; }
 #current-page{ position:relative; z-index:0; height:100%; background-color:white; border:1px solid rgb(210, 211, 212); box-shadow: 2px 2px 10px #bbb; -webkit-box-shadow: 2px 2px 10px #bbb; -moz-box-shadow: 2px 2px 10px #bbb }
 
 #thumbnails{ display:block; padding:0px 50px 10px 50px; height:32px; overflow:hidden; position:relative; text-align:center; background:url(../images/menu-slider-background.png) repeat-x center 10px; }
-#thumbnails-slider{ position:relative; height:8px; margin-top:24px; margin-bottom:14px }
-#thumbnails-slider-handler{ height:28px; width:17px; position:relative; top:-21px; background:url(../images/slider-handler.png); display:none }
-.thumbnails-slider-page{ position:relative; display:block; float:left; height:100%; width:100%; background:url(../images/thumbnails-slider-odd.png) center right; cursor:pointer }
+#thumbnails-slider{ position:relative; height:24px; margin-top:16px; margin-bottom:8px }
+#thumbnails-slider-handler{ text-align:center; letter-spacing:normal;line-height:18px;height:28px; width:25px; position:relative; top:-13px; background:url(../images/slider-handler.png);color:#eeeeee;font-size:10px; }
+.thumbnails-slider-page{ position:relative; display:block; float:left; height:100%; width:100%; background:url(../images/thumbnails-slider-odd.png) no-repeat center right; cursor:pointer }
 .thumbnails-slider-page.last{ background-position: center left } 
+.thumbnails-slider-page:hover{ background-image: url(../images/thumbnails-slider-odd.over.png) } 
 .thumbnails-slider-page.current{ background-image:url(../images/thumbnails-slider-current.png) }
 .thumbnail{
   cursor:pointer;
