new app viewer, lighter player

--- a/app/views/document_publishing/show.html.erb
+++ b/app/views/document_publishing/show.html.erb
@@ -140,7 +140,7 @@
                 <div class='page' id='current-page'>
                     <img id="page-img" src=''/>
                     
-                    <div id="app-border" style="position:absolute;width:100%;height:100%;display:none;top:-7px">
+                    <div id="app-border" style="position:absolute;width:100%;height:100%;display:none;top:0">
                         <!--<div id="app-border-top">
                             <div class="corner" style="background:url(/uniboard-player/images/top-corner-left.png)"></div>
                             <div class="middle top"></div>
@@ -148,7 +148,7 @@
                         </div>-->
                         <div id="app-border-middle">
                             <!--<div class="middle-left"></div>-->
-                            <img style="opacity:0;position:absolute;left:50%;margin-left:-37px; top:100%; margin-top:-30px" src="/uniboard-player/images/app-view.png">
+                            <img style="opacity:0;position:absolute;left:50%;margin-left:-10px; top:-18px;" src="/uniboard-player/images/app-view-start.png">
                             <!--<div class="middle-right"></div>-->
                         </div>
                         <!--<div id="app-border-bottom">
