--- a/app/views/document_publishing/show.html.erb
+++ b/app/views/document_publishing/show.html.erb
@@ -19,6 +19,9 @@
     <script type="text/javascript" src="/uniboard-player/scripts/jquery-ui-1.8rc3.custom.min.js"></script>
     <script type="text/javascript" src="/uniboard-player/scripts/jquery.easing.1.3.js"></script>
   
+    <!-- SwipeListener for iPad/iPhone -->
+    <script type="text/javascript" src="/uniboard-player/scripts/swipeListener.js"></script>
+  
     <!-- Uniboard-player -->
 	<script type="text/javascript" src="/uniboard-player/scripts/ubplayer.js"></script>
 	<script type="text/javascript" src="/uniboard-player/scripts/ubplayer.player.js"></script>
@@ -59,6 +62,11 @@
         }else{
             if(!jQuery.browser.msie){
                 jQuery("body").append('<link rel=stylesheet type="text/css" href="/uniboard-player/stylesheets/master.css">');
+                if(jQuery.browser.safari) {
+                    jQuery("body").append('<link rel=stylesheet type="text/css" href="/uniboard-player/stylesheets/master_ipad.css">');
+                    addSwipeListener(document.body, function(e) { alert(e.direction); });
+                    jQuery("#boards").addClass("boardsEnableAnimation");
+                }
             }else{
                 jQuery("body").append('<link rel=stylesheet type="text/css" href="/uniboard-player/stylesheets/master_ie.css">');
                 if(jQuery.browser.version !== "8.0"){
