--- a/app/views/document_publishing/show.html.erb
+++ b/app/views/document_publishing/show.html.erb
@@ -64,7 +64,13 @@
                 jQuery("body").append('<link rel=stylesheet type="text/css" href="/uniboard-player/stylesheets/master.css">');
                 if(jQuery.browser.safari) {
                     jQuery("body").append('<link rel=stylesheet type="text/css" href="/uniboard-player/stylesheets/master_ipad.css">');
-                    addSwipeListener(document.body, function(e) { alert(e.direction); });
+                    addSwipeListener(document.body, function(e) {
+                        if(e.direction==="right"){
+                            myUbPlayer.gotoPage("PREVIOUS");
+                        }else if(e.direction==="left"){
+                            myUbPlayer.gotoPage("NEXT");
+                        }
+                    });
                     jQuery("#boards").addClass("boardsEnableAnimation");
                 }
             }else{
