--- a/app/views/document_publishing/show.html.erb
+++ b/app/views/document_publishing/show.html.erb
@@ -65,6 +65,7 @@
                 if(jQuery.browser.safari) {
                     jQuery("body").append('<link rel=stylesheet type="text/css" href="/uniboard-player/stylesheets/master_ipad.css">');
                     addSwipeListener(document.body, function(e) {
+                        alert(e.direction);
                         if(e.direction==="right"){
                             myUbPlayer.gotoPage("PREVIOUS");
                         }else if(e.direction==="left"){
