--- a/app/views/document_publishing/show.html.erb
+++ b/app/views/document_publishing/show.html.erb
@@ -65,9 +65,11 @@
                 if(jQuery.browser.safari) {
                     jQuery("body").append('<link rel=stylesheet type="text/css" href="/uniboard-player/stylesheets/master_ipad.css">');
                     addSwipeListener(document.body, function(e) {
-                        if(e.direction==="right"){
+                        if(e.direction=="right"){
+                            alert("right");
                             myUbPlayer.gotoPage("PREVIOUS");
-                        }else if(e.direction==="left"){
+                        }else if(e.direction=="left"){
+                            alert("left");
                             myUbPlayer.gotoPage("NEXT");
                         }
                     });
