new msie message

--- a/app/views/document_publishing/show.html.erb
+++ b/app/views/document_publishing/show.html.erb
@@ -82,7 +82,7 @@
                 }else{
                     jQuery("#alert").css({display: "table"});
                     jQuery("#alert-background").animate({opacity:0.5},500);
-                    jQuery("#alert-box").html('<p>For the best experience with Uniboard player, please install Google Chrome Frame.</p><br/><br/><p><a href="http://www.google.com/chromeframe">Download Google Chrome Frame</a></p><br/><br/><p><a href="#">close</a></p></div>');
+                    jQuery("#alert-box").html('<p>Please start <b>Firefox, Safari</b> or <b>Chrome</b> to view this document, or </p><br/><p><a href="http://www.google.com/chromeframe">Download the Google Chrome Frame plugin</a></p><br/><p>to view it in Internet Explorer.</p><br/></br><p><a href="#">close</a></p></div>');
                 }
             }
             jQuery("#menu-share-dropdown").appendTo("#document-links");
