--- a/uniboard-player/stylesheets/master.css
+++ b/uniboard-player/stylesheets/master.css
@@ -40,7 +40,7 @@ label{ display:block; margin-top:15px; }
 .menu.bottom{
   display:block;
   position:relative;
-  padding:0px 50px 0px 50px;
+  padding:0px 20px 0px 20px;
   color:#666;
   font-size:12px;
   height:55px;
@@ -268,7 +268,7 @@ label{ display:block; margin-top:15px; }
   display:inline-block;
 }
 
-#boards{ background-color:rgb(232, 233, 235); overflow:visible; display:table; text-align:center; height:100%; width:100%; position:relative; margin:auto; margin-top: -45px; }
+#boards{ background-color:rgb(232, 233, 235); overflow:visible; display:table; text-align:center; height:100%; width:100%; position:relative; margin:auto; }
 .board{ display:table-cell; vertical-align:middle; width:100%; height:100%; letter-spacing:-5px }
 .board-button-unit{ height:51px; width:32px; top:50%; position:absolute; margin-top:-25px;display:none;z-index:2; }
 #board-button-previous{ background:url(../images/board-button-previous.png) center left no-repeat; left:0px; }
@@ -276,10 +276,10 @@ label{ display:block; margin-top:15px; }
 #board-button-next{ background:url(../images/board-button-next.png) center right no-repeat; left:100%; margin-left:-32px; }
 #board-button-next:hover{ background-image:url(../images/board-button-next-over.png) }
 
-.page{ display:block; margin:auto; height:100% }
+.page{ display: block; margin:auto; height:100% }
 #current-page{ position:relative; z-index:0; height:100%; background-color:white; border:1px solid rgb(210, 211, 212); box-shadow: 2px 2px 10px rgba(0,0,0,0.2); -webkit-box-shadow: 2px 2px 10px rgba(0,0,0,0.2); -moz-box-shadow: 2px 2px 10px rgba(0,0,0,0.2) }
 
-#thumbnails{ display:block; padding:0px 50px 10px 50px; height:32px; overflow:hidden; position:relative; text-align:center; background:url(../images/menu-slider-background.png) repeat-x center 10px; }
+#thumbnails{ display:block; padding:0px 20px 10px 20px; height:32px; overflow:hidden; position:relative; text-align:center; }
 #thumbnails-slider{ position:relative; height:24px; margin-top:16px; margin-bottom:8px }
 #thumbnails-slider-handler{ text-align:center; letter-spacing:normal;line-height:18px;height:28px; width:25px; position:relative; top:-13px; background:url(../images/slider-handler.png);color:#eeeeee;font-size:10px; }
 .thumbnails-slider-page{ position:relative; display:block; float:left; height:100%; width:100%; background:url(../images/thumbnails-slider-odd.png) no-repeat center right; cursor:pointer }
@@ -295,7 +295,8 @@ label{ display:block; margin-top:15px; }
   border:1px solid rgb(210, 211, 212);
   margin-left:3px;
   margin-right:3px;
-  margin-bottom:25px;
+  margin-top: 12px;
+  margin-bottom: 12px;
   box-shadow: 2px 2px 3px rgba(0,0,0,0.2);
   -webkit-box-shadow: 2px 2px 3px rgba(0,0,0,0.2);
   -moz-box-shadow: 2px 2px 3px rgba(0,0,0,0.2);
@@ -421,6 +422,11 @@ label{ display:block; margin-top:15px; }
   background:url(../images/menu-background.png) repeat-x bottom;
 }
 
+#foot-inner {
+  position:relative; 
+  height:100%;
+}
+
 #menubottom-input{
   text-align:right;
   width:2em;
@@ -435,20 +441,7 @@ label{ display:block; margin-top:15px; }
     cursor:pointer;
 }
 
-/*  App border  */
-#app-border-top{width:100%;height:7px}
-    .middle.top{background:url(../images/top.png)}
-
-#app-border-middle{height:100%;width:100%}
-    .middle-left{position:absolute;width:7px;height:100%;background:url(../images/middle-left.png)}
-    .middle-right{position:absolute;width:7px;height:100%;left:100%;margin-left:-7px;background:url(../images/middle-right.png)}
-
-#app-border-bottom{width:100%;position:absolute;height:7px;left:0px;margin-top:7px;top:100%}
-    .middle .bottom{background:url(../images/bottom.png)}
-
 .middle{height:7px;margin-left:7px;margin-right:7px}
-.corner{position:absolute;width:7px;height:7px}
-.corner.right{top:0px;left:100%;margin-left:-7px}
 
 #sankorebody {
   display: block;
@@ -460,7 +453,28 @@ label{ display:block; margin-top:15px; }
   width:100%;
 }
 
+#thumbnail-previous, #thumbnail-next {
+  width:40px; 
+  height:80px; 
+  position:absolute; 
+  top:45px; 
+  color:red; 
+  font-size:10px; 
+  line-height:80px;
+  text-decoration:underline; 
+  letter-spacing:normal;
+}
+
+#thumbnail-previous {
+  left: 0px;
+}
+
+#thumbnail-next {
+  left:100%;
+  margin-left:-41px;
+}
+
 #head-list-back { 
-  background:url(../images/head-button-close.png") no-repeat 0px 0px; 
+  background:url("../images/head-button-close.png") no-repeat 0px 0px; 
 }
 
