New version of the player with new controls, support for full screen in embedded mode, better full screen display, additional documentation

--- a/uniboard-player/stylesheets/master_embed.css
+++ b/uniboard-player/stylesheets/master_embed.css
@@ -32,7 +32,6 @@ body {
 }
 
 #page-img {
-  height: 440px;
   height: auto;
   display: table-cell;
   vertical-align: middle;
@@ -45,6 +44,7 @@ body {
 
 .board {
   display: block;
+  padding-bottom: 0px;
 }
 
 
