--- a/uniboard-player/stylesheets/master.css
+++ b/uniboard-player/stylesheets/master.css
@@ -61,53 +61,6 @@ label{ display:block; margin-top:15px; }
 .menu-box-center{ text-align:center; line-height:30px }
 .menu-box-right{ text-align:right; letter-spacing:normal; }
 
-.menu-button { 
-  height:31px; 
-  width:32px; 
-  display:-moz-inline-stack;
-  display:inline-block; 
-  zoom:1;
-  *display:inline;
-  cursor:pointer; 
-}
-#menu-button-previous{ background:url(../images/menu-button-previous.embed.png); width:32px }
-#menu-button-previous:hover{ background:url(../images/menu-button-previous-over.embed.png) }
-#menu-button-previous.disabled{ background:url(../images/menu-button-previous-disabled.embed.png) }
-#menu-button-index{ background:url(../images/menu-button-index.png); width:35px }
-#menu-button-index:hover{ background:url(../images/menu-button-index-over.png) }
-#menu-button-index.disabled{ background:url(../images/menu-button-index-disabled.png) }
-#menu-button-showdetails{ background:url(../images/menu-button-showdetails.png); width:33px }
-#menu-button-showdetails:hover{ background:url(../images/menu-button-showdetails-over.png) }
-#menu-button-next{ background:url(../images/menu-button-next.embed.png); width:32px }
-#menu-button-next:hover{ background:url(../images/menu-button-next-over.embed.png) }
-#menu-button-next.disabled{ background:url(../images/menu-button-next-disabled.embed.png) }
-#menu-button-showthumbnails{ background:url(../images/menu-button-showthumbnails.png) }
-#menu-button-showthumbnails:hover{ background:url(../images/menu-button-showthumbnails-over.png) }
-#menu-button-export{ width:auto; margin-right:20px; }
-#menu-button-export-left{ background:url(../images/menu-button-export-left.png); width:33px; height:100%; float:left }
-#menu-button-export-center{ background:url(../images/menu-button-export-center.png); width:auto; height:100%; float:left; padding:0px 10px 0px 10px; letter-spacing:normal; line-height:30px }
-#menu-button-export-right{ background:url(../images/menu-button-export-right.png); width:5px; height:100%; float:left }
-#menu-button-full{ background:url(../images/menu-button-full.png); margin-right:10px; }
-#menu-button-full:hover{ background:url(../images/menu-button-full-over.png) }
-#menu-button-full.disabled{ background:url(../images/menu-button-full-disabled.png) }
-#menu-export-dropdown{ display:none; position:absolute; top:-55px; left:0; margin-left:0px; width:90px; z-index:2; text-indent:30px; }
-#menu-share-dropdown{ display:none; font-size:12px; position:absolute; top:28px; left:100%; margin-left:-122px; width:100px; z-index:2; text-indent:30px; }
-
-#menu-share-email{ background:url(../images/menu-share-email.png) no-repeat 0px 3px }
-#menu-share-email a{ color:#ccc; }
-#menu-share-facebook{ background:url(../images/menu-share-facebook.png) no-repeat 0px 3px }
-#menu-share-facebook a:hover{color:red;}
-#menu-share-twitter{ background:url(../images/menu-share-twitter.png) no-repeat 0px 3px }
-#menu-share-twitter a:hover{color:red;}
-#menu-share-share{ background:url(../images/menu-share-share.png) no-repeat 0px 0px; color:red;text-decoration:underline; margin-top:6px; line-height:12px; }
-#menu-share-share a{ color:red }
-
-#menu-export-hasUbz{ background:url(../images/menu-export-ubz.png) no-repeat 0px 3px }
-#menu-export-hasPdf{ background:url(../images/menu-export-pdf.png) no-repeat 0px 3px }
-
-#menu-export-hasUbz.disabled{ background-image:url(../images/menu-export-ubz.disabled.png) }
-#menu-export-hasPdf.disabled{ background-image:url(../images/menu-export-pdf.disabled.png) }
-
 .dropdown ul{
   line-height:20px;
   text-align:left;
@@ -277,9 +230,9 @@ label{ display:block; margin-top:15px; }
 #board-button-next:hover{ background-image:url(../images/board-button-next-over.png) }
 
 .page{ display: block; margin:auto; height:100% }
-#current-page{ position:relative; z-index:0; height:100%; background-color:white; border:1px solid rgb(210, 211, 212); box-shadow: 2px 2px 10px rgba(0,0,0,0.2); -webkit-box-shadow: 2px 2px 10px rgba(0,0,0,0.2); -moz-box-shadow: 2px 2px 10px rgba(0,0,0,0.2) }
+#current-page{ position:relative; z-index:0; height:100%; background-color:white; border:1px solid rgb(210, 211, 212); }
 
-#thumbnails{ display:block; padding:0px 20px 10px 20px; height:32px; overflow:hidden; position:relative; text-align:center; }
+#thumbnails{ display:block; padding:0px 20px 10px 20px; height:32px; overflow:hidden; position:relative; text-align:center; background:url(../images/thumbnail-background.png) repeat; }
 #thumbnails-slider{ position:relative; height:24px; margin-top:16px; margin-bottom:8px }
 #thumbnails-slider-handler{ text-align:center; letter-spacing:normal;line-height:18px;height:28px; width:25px; position:relative; top:-13px; background:url(../images/slider-handler.png);color:#eeeeee;font-size:10px; }
 .thumbnails-slider-page{ position:relative; display:block; float:left; height:100%; width:100%; background:url(../images/thumbnails-slider-odd.png) no-repeat center right; cursor:pointer }
@@ -293,16 +246,13 @@ label{ display:block; margin-top:15px; }
   display:inline-block;
   position:relative;
   border:1px solid rgb(210, 211, 212);
-  margin-left:3px;
-  margin-right:3px;
+  margin-left:6px;
+  margin-right:6px;
   margin-top: 12px;
   margin-bottom: 12px;
   box-shadow: 2px 2px 3px rgba(0,0,0,0.2);
   -webkit-box-shadow: 2px 2px 3px rgba(0,0,0,0.2);
   -moz-box-shadow: 2px 2px 3px rgba(0,0,0,0.2);
-  -webkit-box-sizing:border-box; 
-  -moz-box-sizing:border-box; 
-  box-sizing:border-box;
 }
 
 #thumbnails-canvas{
@@ -419,7 +369,6 @@ label{ display:block; margin-top:15px; }
   left: 0;
   width:100%;
   height:96px;
-  background:url(../images/menu-background.png) repeat-x bottom;
 }
 
 #foot-inner {
@@ -477,4 +426,36 @@ label{ display:block; margin-top:15px; }
 #head-list-back { 
   background:url("../images/head-button-close.png") no-repeat 0px 0px; 
 }
+
+/*
+Player Controls
+----------------------------------------------------------------------
+*/
+#playerControls {width: 100%;}
+#playerControlsinner {
+  background: url("../images/playercontrolsbg.png") no-repeat center center;
+  height: 20px; width: 531px;
+  margin: 0 auto; padding: 15px 0; 
+  list-style: none;
+  text-align: center;
+  overflow: hidden;
+}
+
+#playerControlsinner li   { float: left; display: inline; padding: 0 10px;}
+#playerControlsinner li img { display: block;  border: 0 none; cursor: pointer; }
+
+#pcleftend { margin-left: 175px;}
+#pcleft {}
+#pcrightend {}
+#pcrightend {}
+
+li#pccounter { 
+  background: #C4C6C8;
+  color: #656565;
+  padding: 0 10px 0 0;
+  border-radius: 4px;
+  margin-left: 45px;
+  padding-left: 0;
+}
+#pccounter input { width: 30px; margin: 0; padding: 3px 0 3px 5px; box-shadow: inset 1px 1px 3px #AAA;}
 
