--- a/uniboard-player/stylesheets/ubloader-embed.css
+++ b/uniboard-player/stylesheets/ubloader-embed.css
@@ -2,3 +2,11 @@
 #sankoreplayer-header {
  display: none;
 }
+
+#sankoreplayer {
+ position: relative;
+ bottom: none;
+ top: none;
+ left: none;
+ right: none;
+}
