--- a/uniboard-player/stylesheets/master.css
+++ b/uniboard-player/stylesheets/master.css
@@ -121,8 +121,7 @@ label{ display:block; margin-top:15px; }
 }
 
 #page-img{
-    width:100%;
-    height:100%;
+  width: 100%;
 }
 
 #document-title span{
@@ -241,9 +240,10 @@ label{ display:block; margin-top:15px; }
 .thumbnails-slider-page.current{ background-image:url(../images/thumbnails-slider-current.png) }
 .thumbnail{
   cursor:pointer;
-  height:80px;
+  height:auto;
   width:auto;
-  display:inline-block;
+  display:block;
+  float: left;
   position:relative;
   border:1px solid rgb(210, 211, 212);
   margin-left:4px;
@@ -253,6 +253,11 @@ label{ display:block; margin-top:15px; }
   box-shadow: 2px 2px 3px rgba(0,0,0,0.2);
   -webkit-box-shadow: 2px 2px 3px rgba(0,0,0,0.2);
   -moz-box-shadow: 2px 2px 3px rgba(0,0,0,0.2);
+}
+
+/* IE8 hack otherwise we have 2 pixels between the image and the div */
+.thumb-img {
+  vertical-align: bottom;
 }
 
 #thumbnails-canvas{
