--- a/uniboard-player/stylesheets/master_embed.css
+++ b/uniboard-player/stylesheets/master_embed.css
@@ -1,6 +1,11 @@
 
 body {
+ position: static;
  overflow: hidden;
+ top: auto;
+ bottom: auto;
+ left: auto;
+ right: auto;
 }
 
 #thumbnails-slider {
